--- a/poem-picture/Base.lproj/Main.storyboard
+++ b/poem-picture/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tlE-FI-Bs0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tlE-FI-Bs0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
         <!--picture-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="picture" id="BYZ-38-t0r" customClass="ViewController" customModule="poem_picture" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="picture" title="picture" id="BYZ-38-t0r" customClass="ViewController" customModule="poem_picture" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,11 +36,30 @@
                     </view>
                     <connections>
                         <outlet property="imageView" destination="Jqw-io-0iQ" id="pKc-P0-E7J"/>
+                        <segue destination="wz6-KL-XMn" kind="show" identifier="toFiller" id="tMe-gX-YEG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="230" y="134"/>
+            <point key="canvasLocation" x="130" y="133"/>
+        </scene>
+        <!--Filler View Controller-->
+        <scene sceneID="rfn-SF-q2S">
+            <objects>
+                <viewController storyboardIdentifier="filler-processing" id="wz6-KL-XMn" customClass="FillerViewController" customModule="poem_picture" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zuK-rY-zBD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="2fW-HF-OzM"/>
+                    </view>
+                    <connections>
+                        <segue destination="GOi-B2-Ntb" kind="show" id="wY0-is-BDK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qi5-o6-IfG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="794" y="129"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="89I-l8-GSr">
@@ -98,7 +117,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jtj-MX-Sc8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1004" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1526" y="106"/>
         </scene>
         <!--HomeController-->
         <scene sceneID="kiw-7k-CMf">
