--- a/docs/views/index.hbs
+++ b/docs/views/index.hbs
@@ -2,18 +2,26 @@
 <html>
 <head>
 	<title></title>
-	<!-- <link rel="stylesheet" type="text/css" href="public/css/styles.css"> -->
+	<link rel="stylesheet" type="text/css" href="public/css/styles.css">
 </head>
 <body>
 
-<p>adsf</p>
+<h1>NameTBD</h1>
 
+{{#showHr @index}}
+    <hr/>
+{{/showHr}}
+
+<div>
 {{#each body as |elem|}}
-	<p>{{elem.line1}}</p>
-	<p>{{elem.line2}}</p>
-	<p>{{elem.line3}}</p>
+<div class = "half-row">
+	<p class = "top">{{elem.line1}}</p>
+	<p class = "mid">{{elem.line2}}</p>
+	<p class = "bot">{{elem.line3}}</p>
 	<img src = {{elem.src}}>
+</div>
 {{/each}}
+</div>
 
 </body>
 </html>
